# hobo_vr

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  com_client.py  com_client2.py  com_server.py  driver_sample.cpp  driver_sample_old.cpp  driver_unregister_win.bat  driverlog.cpp  driverlog.h  poseTracker.py  poserTemplate.py  pypi_readme.md  requirements.txt  setup.py  simplified_vr_systems.md  tox.ini  utilz.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.run/: pyvr gui.run.xml  pyvr track-nrf.run.xml  pyvr track.run.xml
ai/: README.md
algo_tests/: README.md  color_mask_calibration.py
bash/: linux_client.sh  register_driver.sh  steam_linux_nvidia_fix.sh
bindings/: README.md
bindings/cpp/: README.md  receiver_win.h  util.h  virtualreality.h
bindings/cpp/examples/uduPoserTemplate/: CMakeLists.txt  uduPoserTemplate.sln
bindings/cpp/examples/uduPoserTemplate/src/: main.cpp
bindings/cpp/examples/uduPoserTemplate/uduPoserTemplate/: main.cpp  receiver_win.h  uduPoserTemplate.vcxproj  uduPoserTemplate.vcxproj.filters  util.h  virtualreality.h
bindings/cpp/virtualreality/: receiver_win.h  util.h  virtualreality.h  virtualreality_receiver_win.h  virtualreality_util.h
bindings/python/: README.md  pypi_readme.md  setup.py
bindings/python/examples/: anim_demo.py  base.py  crude_demo.py  fake_driver.py  fake_driver_udu.py  imu_demo.py  poserClient.py  poserTemplate.py  poser_3dof_hmd_only.py  poser_3dof_hmd_only2.py  poser_draw_room_boundaries.py  uduPoserClient.py  uduPoserTemplate.py
bindings/python/virtualposers/: __init__.py  main.py
bindings/python/virtualposers/gui/: gui.py
bindings/python/virtualreality/: __init__.py  __main__.py  main.py
driver/: .gitignore  CMakeLists.txt  README.md  driver.kdev4  setup_windows.bat  vid enc to dec priority list.txt
driver/.kdev4/: driver.kdev4
driver/build-src-Desktop-Debug/: Makefile  Project.cbp  cmake_install.cmake
driver/example/: CMakeLists.txt  example_receiver.cpp
driver/src/: CMakeLists.txt  README.md  after_compile_win.bat  driver_hobovr.cpp  driver_hobovr.vcxproj  driver_sample.cpp  driver_sample.vcxproj  driverlog.cpp  driverlog.h  encode.cpp  test_driver_hobovr.cpp  test_driver_hobovr.cpp_off
driver/src/device/: hobovr_device_base.h
driver/src/networking/: zmqpubsub.cpp
driver/src/networking/flatbuffers/: controller.fbs
driver/src/ref/: VulkanWindow.cpp  VulkanWindow.hpp  com_recv_unix.cpp  com_recv_unix.cpp_off  com_recv_win.h  d3drender.cpp  d3drender.h  driver_sample_old.cpp  driver_sample_old.cpp_off  hobovr_components.h  hobovr_components.h.autosave  hobovr_device_base.h  receiver.h  receiver_linux.h  receiver_win.h  util.h  vr_device_base.h
driver/src/ref/vulkan_shaders/: shader.frag  shadercompile.sh
driver/src/server/: hobovr_server.cpp  hobovr_server.h  server_message_handler.h  zmqreqrep.cpp  zmqreqrep.h
driver/src/server/flatbuffers/: byte_dict.fbs  byte_dict_generated.h  controller.fbs  controller_generated.h  devices.fbs  devices_generated.h  generate.bat  message.fbs  message_generated.h  pose.fbs  pose_generated.h
driver/src/server/flatbuffers/fbs/: Controller.py  Vec3.py
driver/src/server/protobufs/: byte_dict.pb.cc  byte_dict.pb.h  controller.pb.cc  controller.pb.h  devices.pb.cc  devices.pb.h  message.pb.cc  message.pb.h  pose.pb.cc  pose.pb.h
driver/src/server/protobufs/proto/: byte_dict.proto  controller.proto  devices.proto  generate.bat  message.proto  pose.proto
driver/test/: CMakeLists.txt  test.cpp  test_server_message_handler.cpp  test_sub.py  test_zmq_pub_sub.cpp  test_zmq_pub_sub.py  test_zmqpubsub.cpp
driver/test/fbs/: ByteDict.py  ByteDictEntry.py  Pose.py  Vec4.py
examples/: anim_demo.py  crude_demo.py  fake_driver.py  fake_driver_udu.py  imu_demo.py  less_crude_demo.py  poserClient.py  poserTemplate.py  poserTemplateOld.py  poser_3dof_hmd_only.py  poser_3dof_hmd_only2.py  poser_draw_room_boundaries.py  uduPoserClient.py  uduPoserTemplate.py
hobovr/: README.md  driver.vrdrivermanifest
hobovr/resources/: driver.vrresources  on_start.py
hobovr/resources/input/: default_hla_bindings_hobovr_controller.json  hobovr_controller_profile.json  hobovr_hmd.json  hobovr_hmd_profile.json  hobovr_tracker_profile.json  hobovrhmd_profile.json  legacy_binding_hobovr_controller.json  vrcompositor_bindings_hobovrhmd.json
hobovr/resources/settings/: default.vrsettings
installer/: hobovr_installer.nsi
installer/linux/: README.md
installer/linux/online/: .gitignore  build_deb.sh
installer/win/: README.md  hobovr_installer.nsi
installers/linux/offline/: .gitignore  build_deb.sh
installers/linux/online/: hobo_vr.deb
installers/win/: README.md
pyVr/: __init__.py  utilz.py
pyVr/server/: __init__.py  __main__.py  server.py
ref/: com_recv_unix.cpp  com_recv_win.cpp  com_recv_win.h  controllerDriverRef.cpp  driver_sample.cpp  hmdDriverRef.cpp  serverDriverRef.cpp  watchdogDriverRef.cpp
sample/resources/: driver.vrresources
sample/resources/input/: hobo_controller_profile.json  legacy_binding_mycontroller.json
sample/resources/settings/: default.vrsettings
scripts/linux/: register_driver.sh  server.sh
scripts/win/: driver_register_win.bat  driver_unregister_win.bat
tests/: test_blob_tracker.py  test_mock_displayarray.py
tests/data/: __init__.py
tests/mocks/: mock_displayarray.py
tests/test_util/: test_imu.py
virtualreality/: __init__.py  main.py  utilz.py
virtualreality/calibration/: __init__.py  camera_calibration.py  manual_color_mask_calibration.py  orientation_calibration.py
virtualreality/gui/: gui.py
virtualreality/logging/: log.py
virtualreality/server/: __init__.py  __main__.py  server.py
virtualreality/template/: templates.py
virtualreality/templates/: __init__.py  poses.py  template_base.py  templates.py  udu_templates.py
virtualreality/trackers/: __init__.py  color_tracker.py  color_tracker_nrf.py  inside_out.py  rgby_tracker.py
virtualreality/util/: IMU.py  __init__.py  blobfinder.py  blobfinder2.py  bluetooth.py  driver.py  kalman.py  utilz.py
(+75 files in other folders)
